--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
   </head>
   <body>
     <h1>마당을 쓸었습니다-나태주</h1>
-    <p>마당을 쓸었습니다</p>
-    <p>지구 한 모퉁이가 깨끗해졌습니다</p>
-    <p> </p>
-    <p>꽃 한송이 피었습니다</p>
-    <p>지구 한 모퉁이가 아름다워졌습니다</p>
-    <p> </p>
-    <p>나는 지금 그대를 사랑합니다</p>
-    <p>지구 한 모퉁이가 더욱 깨끗해지고</p>
-    <p>아름다워졌습니다</p>
+    <h2>마당을 쓸었습니다</h2>
+    <h2>지구 한 모퉁이가 깨끗해졌습니다</h2>
+    <h2>꽃 한송이 피었습니다</h2>
+    <h2>지구 한 모퉁이가 아름다워졌습니다</h2>
+    <h2>나는 지금 그대를 사랑합니다</h2>
+    <h2>지구 한 모퉁이가 더욱 깨끗해지고</h2>
+    <h2>아름다워졌습니다</h2>
     
   </body>
   
