--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <html>
   <head>
     마당을 쓸었습니다-나태주
+    <style>
+      body{
+        background-image: url(https://previews.123rf.com/images/yupiramos/yupiramos1802/yupiramos180210631/95220577-earth-planet-world-globe-map-icon-vector-illustration.jpg);
+      }
+    </style>
   </head>
+  
   <body>
     <h1>마당을 쓸었습니다-나태주</h1>
-    <h2>마당을 쓸었습니다</h2>
-    <h2>지구 한 모퉁이가 깨끗해졌습니다</h2>
-    <h2>꽃 한송이 피었습니다</h2>
-    <h2>지구 한 모퉁이가 아름다워졌습니다</h2>
-    <h2>나는 지금 그대를 사랑합니다</h2>
-    <h2>지구 한 모퉁이가 더욱 깨끗해지고</h2>
-    <h2>아름다워졌습니다</h2>
+    <p>마당을 쓸었습니다</p>
+    <p>지구 한 모퉁이가 깨끗해졌습니다</p>
+    <p>꽃 한송이 피었습니다</p>
+    <p>지구 한 모퉁이가 아름다워졌습니다</p>
+    <p>나는 지금 그대를 사랑합니다</p>
+    <p>지구 한 모퉁이가 더욱 깨끗해지고</p>
+    <p>아름다워졌습니다</p>
     
   </body>
   
