--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-  <head>
-    마당을 쓸었습니다-나태주
+ <head>
+   <title>CSS3 Background property</title>
+    
     <style>
-      body{
+      #box{
         background-image: url(https://previews.123rf.com/images/yupiramos/yupiramos1802/yupiramos180210631/95220577-earth-planet-world-globe-map-icon-vector-illustration.jpg);
       }
     </style>
