--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <style>
       #box{
-        background-image: url(https://previews.123rf.com/images/yupiramos/yupiramos1802/yupiramos180210631/95220577-earth-planet-world-globe-map-icon-vector-illustration.jpg);
+        background-image: url(https://png.pngtree.com/png-clipart/20210227/ourmid/pngtree-earth-png-image_2963290.jpg);
       }
     </style>
   </head>
